# fossilizid

./: CMakeLists.txt  README.md
comm-protocols/: CMakeLists.txt  elementinfo.cpp  elementinfo.h  enumtype.h  networkcmd.cpp  networkcmd.h  vector.cpp  vector.h
container/: msque.h  optimisticque.h  ringque.h  small_hash_map.h  swapque.h
context/: context.cpp  context.h
doc/: fossilizid说明文档.docx
juggle/: CMakeLists.txt
juggle/interface/: channel.h  juggle.h  mutex.h  object.h  semaphore.h  service.h
juggle/plugin/json/: channel.h  channelserver.cpp  channelserver.h  object.h
juggle/rpcmake/: codegen.py  deletenonespacelstrip.py  juggle.juggle  rpcmake.py  statemachine.py
juggle/service/: caller.cpp  caller.h  channel.cpp  channel.h  globalhandle.h  module.cpp  module.h  semaphore.cpp  service.cpp  service.h
pool/: factory.h  mempool.cpp  mempool.h
reduce-rpc/: CMakeLists.txt
reduce-rpc/interface/: CMakeLists.txt  IInterface.h  ILocaleEndpoint.cpp  ILocaleEndpoint.h  ILocaleObj.h  IRemoteEndpoint.cpp  IRemoteEndpoint.h  ITimeCallback.cpp  ITimeCallback.h
reduce-rpc/rpcmake/: clientcodegen.py  deletenonespacelstrip.py  readme  rpcinfo.py  rpcmake.py  ruletable.py  statemachine.py  syntaxanalysis.py
reduce-rpc/service/: CMakeLists.txt  acceptservice.cpp  acceptservice.h  connectservice.cpp  connectservice.h  locale_obj.cpp  locale_obj.h  mutex.cpp  mutex.h  obj.cpp  obj.h  protodescription.h  remote_obj.cpp  remote_obj.h  rpcsession.cpp  rpcsession.h  service.cpp  service.h  session.h  tempsession.cpp  tempsession.h  uuid.cpp  uuid.h
reduce/service/: acceptservice.cpp  acceptservice.h  connectservice.cpp  connectservice.h  locale_obj.h  obj.cpp  obj.h  remote_obj.cpp  remote_obj.h  rpcsession.cpp  rpcsession.h  service.cpp  service.h  session.h  tempsession.cpp  tempsession.h  uuid.cpp  uuid.h
reliably- transmission/: CMakeLists.txt  UDPBase.cpp  UDPConnect.h
reliably-transmission/: CMakeLists.txt  UDPClient.h  UDPService.h
reliablyt/: UDPBase.h  UDPSession.h
remote-queue/: CMakeLists.txt  acceptor.h  channel.h  close.h  detail.cpp  endpoint.h  queue.h  remote_queue.h  typedef.h
remote-queue/windows/: acceptorimpl.cpp  acceptorimpl.h  channelimpl.cpp  channelimpl.h  close.cpp  endpointimpl.cpp  endpointimpl.h  handle.h  overlapped.h  queueimpl.cpp  queueimpl.h  wsainit.cpp  wsainit.h
remoteq/: CMakeLists.txt  acceptor.h  channel.h  close.h  detail.cpp  endpoint.h  queue.h
remoteq/windows/: acceptorimpl.cpp  acceptorimpl.h  channelimpl.cpp  channelimpl.h  close.cpp  endpointimpl.cpp  endpointimpl.h  handle.h  overlapped.h  queueimpl.cpp  queueimpl.h  wsainit.h
test/: CMakeLists.txt
test/test_container/: CMakeLists.txt  main.cpp
test/test_context/: CMakeLists.txt  main.cpp
test/test_pool/: CMakeLists.txt  main.cpp
test/test_remote_queue/client/: CMakeLists.txt  main.cpp
test/test_remote_queue/server/: CMakeLists.txt  main.cpp
test/test_service/client/: CMakeLists.txt  main.cpp
test/test_service/server/: CMakeLists.txt  main.cpp
test/test_udp/client/: CMakeLists.txt  main.cpp
test/test_udp/server/: CMakeLists.txt  main.cpp
